dating/frontend/style/style.scss
@import "reset";
@import "colors";
@import "typography";
@import "grid";
@import "shadows";

@import "skeleton";
@import "helpers";
@import "forms";
@import "scrollbars";
@import "messages";

%button {
    @extend %txt-button;

    outline: 0;
    border: none;
    border-radius: 0.15rem;
    height: $txt-lh-btn;
    display: inline-block;
    padding: 0 1rem;
    text-align: center;
    cursor: pointer;
    -webkit-tap-highlight-color: transparent;
    transition: background, color, box-shadow 0.15s ease;

    .material-icons {
        line-height: $txt-lh-btn;
    }
}

.flat-btn {
    @extend %button;

    height: 1rem;
    line-height: 1rem;
    color: $txt-col-light;

    .material-icons {
        line-height: 1rem;
    }

    &:hover {
        color: $pri-col;
    }

    &:active {
        color: $pri-col-dark;
    }
}

button, .btn {
    @extend %button;
    @extend %txt-white;
    @extend %shadow-2;

    background-color: $pri-col;

    transition: background 0.15s ease;

    &:hover {
        background-color: $pri-col-light;
        @extend %shadow-4;
    }

    &:active {
        background-color: $pri-col-dark;
    }
}

.toasts {
    position: fixed;
    right: 1rem;
    top: $header-height;
    z-index: 2;

    .toast {
        margin-top: 1rem;
        background-color: white;
        padding: .3rem 1rem;
        margin-bottom: 0.5rem;
        border: 1px solid #852929;
        display: block;
        border-radius: 0.2rem;
    }
}

.property-group {
    position: relative;
    width: 100%;
    min-height: 3.5rem;

    .label {
        @extend %txt-label;
        top: 0.2rem;
        left: 0;
        cursor: text;

        position: absolute;
        transform-origin: 0 0;
        color: $txt-col-light;
        transform: translateY(-1.2rem) scale(.80);
    }

    .value {
        position: absolute;
        width: 100%;
        height: 2rem;
        font-size: 1.4rem;
        line-height: 2rem;
    }
}

.property {
    span {
        display: block;
    }
}


.user-card {
    @extend %shadow-1;

    .profile-image {
        width: 100px;

        div {
            width: 100%;
            height: 100px;
            background-position: center;
            background-size: cover;
        }
    }

    .pri-title {
        margin: 1rem;
    }

    p {
        font-size: 0.9rem;
        line-height: 1.2rem;
        font-weight: $txt-weight-light;
        color: $txt-col-dark;

        margin: 0 1rem 1rem 1rem;
        height: 3.6rem;
        overflow: hidden;
    }

    .flat-btn {
        margin: 0 0
        1rem -7px;
    }
}

.modal {
    @extend %shadow-4;

    position: absolute;
    padding: 1rem;
    width: 360px;
    top: 30vh;
    left: calc(50% - 180px);
    z-index: 1;
    border-radius: 0.15rem;
    background-color: lighten($bg-col-light, 10%);

    p {
        margin-bottom: 0.5rem;
    }

    .btn {
        float: right;
        margin-left: 1rem;
    }
}

